@@ -96,20 +96,6 @@ method is-vertical() returns Bool
 
 True if the writing direction is top-to-bottom or bottom-to-top
 
-### method cairo-glyphs
-
-```perl6
-method cairo-glyphs(
-    Numeric :x($x0) = 0e0,
-    Numeric :y($y0) = 0e0,
-    Numeric :$scale = 1.0
-) returns Mu
-```
-
-Return a set of Cairo compatible shaped glyphs
-
-The return object is typically passed to either the Cairo::Context show_glyphs() or glyph_path() methods
-
 ### method reset
 
 ```perl6
