@@ -12,7 +12,6 @@ unit class HarfBuzz::Buffer;
   my HarfBuzz::Font $font .= new: :file<t/fonts/NimbusRoman-Regular.otf>;
   $font.shape: :$buf;
   say $font.shaped; # True
-  say $font.cairo-glyphs.raku;
 
 =head2 Description
 
