@@ -12,6 +12,7 @@ use HarfBuzz::Glyph;
 use HarfBuzz::Raw;
 use NativeCall;
 use Method::Also;
+use Cairo;
 
 has HarfBuzz::Buffer() $!buf handles<length language script script-name direction text is-horizontal is-vertical>;
 has HarfBuzz::Font() $!font handles<face scale size glyph-name glyph-from-name glyph-extents ft-load-flags features add-features>;
@@ -30,10 +31,6 @@ method font is rw returns HarfBuzz::Font {
             $!gen = 0;
         }
     )
-}
-
-method cairo-glyphs(:$scale = 1000 / self.scale[0], |c) {
-    $.buf.cairo-glyphs: :$scale, |c;
 }
 
 #| Gets or sets the shaping buffer
@@ -58,15 +55,19 @@ method shape returns Iterator {
         has HarfBuzz::Font:D $.font is required;
         has hb_glyph_position $!Pos = $!buf.raw.get-glyph-positions(0);
         has hb_glyph_info     $!Info = $!buf.raw.get-glyph-infos(0);
+        has Numeric @!vec;
+        submethod TWEAK {
+            @!vec = $!font.scale.map: $!font.raw.get-size / *;
+        }
         method iterator { self }
         method pull-one {
             if $!idx < $!buf.length {
                 my hb_glyph_position:D $pos = $!Pos[$!idx];
                 my hb_glyph_info:D $info = $!Info[$!idx];
                 $!idx++;
-                my @vec = $!font.scale.map: $!font.raw.get-size / *;
-                my Str:D $name = $!font.glyph-name($info.codepoint);
-                HarfBuzz::Glyph.new: :$pos, :$info, :$name, :$!buf, :@vec;
+                my Int:D $codepoint = $info.codepoint;
+                my Str:D $name = $!font.glyph-name($codepoint);
+                HarfBuzz::Glyph.new: :$pos, :$info, :$name, :$codepoint, :$!buf, :@!vec;
             }
             else {
                 IterationEnd;
@@ -77,10 +78,30 @@ method shape returns Iterator {
     Iteration.new: :$.buf, :$!font;
 }
 
+#| Return a set of Cairo compatible shaped glyphs
+method cairo-glyphs(Numeric :x($x0) = 0e0, Numeric :y($y0) = 0e0, |c) {
+    my Cairo::Glyphs $cairo-glyphs .= new: :elems($!buf.length);
+    my Cairo::cairo_glyph_t $cairo-glyph;
+    my int $i = -1;
+    my Num $x = $x0.Num;
+    my Num $y = $y0.Num;
+
+    for self.shape(|c) -> $glyph {
+        $cairo-glyph = $cairo-glyphs[++$i];
+        $cairo-glyph.index = $glyph.codepoint;
+        $cairo-glyph.x = $x + $glyph.x-offset;
+        $cairo-glyph.y = $y + $glyph.y-offset;
+        $x += $glyph.x-advance;
+        $y += $glyph.y-advance;
+    }
+
+    $cairo-glyphs.x-advance = $x - $x0;
+    $cairo-glyphs.y-advance = $y - $y0;
+
+    $cairo-glyphs;
+}
 =begin pod
-
-=para Typically passed to either the Cairo::Context show_glyphs() or glyph_path() methods
-
+=para The return object is typically passed to either the Cairo::Context show_glyphs() or glyph_path() methods
 =end pod
 
 #| Returns scaled X and Y displacement of the shaped text
