@@ -6,7 +6,7 @@ use Cairo;
 use Font::FreeType;
 use Font::FreeType::Face;
 use Test;
-plan 65;
+plan 42;
 
 my $version = HarfBuzz.version;
 unless $version >= v1.6.0 {
@@ -18,23 +18,14 @@ my $file = 't/fonts/NimbusRoman-Regular.otf';
 my $ft-face = Font::FreeType.new.face($file);
 my $text = 'Hell€!';
 my @scale = 1000;
-my HarfBuzz::Shaper $hb .= new: :font{:$file, :@scale}, :buf{:$text, :language<epo>};
-my HarfBuzz::Shaper $hb-ft .= new: :buf{:text<blah>, :language<epo>}, :font{ :$ft-face, :@scale};
-$hb-ft.text = $text;
+my HarfBuzz::Shaper $hb .= new: :font{:$file, :size(16)}, :buf{:$text, :language<epo>, };
+my HarfBuzz::Shaper $hb-ft .= new: :buf{:$text, :language<epo>}, :font{ :$ft-face, :size(16)};
 
-my HarfBuzz::Buffer $buf .= new: :$text, :language<epo>;
-nok $buf.shaped;
-
-given %(:$file, :@scale) -> HarfBuzz::Font() $_ {
-    .shape: :$buf;
-}
-ok $buf.shaped;
-
-for $hb, $hb-ft, $buf {
+for $hb, $hb-ft {
     my Cairo::Glyphs $glyphs = .cairo-glyphs;
     is $glyphs.elems, $text.chars;
     enum <index x y>;
-    my Array @expected = [41, 0, 0 ], [70, 11.28, 0], [77, 17.88, 0], [77, 22.22, 0], [347, 26.56, 0], [2, 34.38, 0];
+    my Array @expected = [41, 0, 0 ], [70, 11.55, 0], [77, 18.3, 0], [77, 22.75, 0], [347, 27.2, 0], [2, 35.2, 0];
 
     for 0 ..^ @expected {
         my Cairo::cairo_glyph_t:D $glyph = $glyphs[$_];
@@ -44,7 +35,7 @@ for $hb, $hb-ft, $buf {
         is $glyph.y.round(.01), @expected[$_][y],  "glyph $_ y";
     }
 
-    is $glyphs.x-advance.round(0.01), 39.58;
-    is $glyphs.y-advance.round(0.01), 0;
+    is-approx $glyphs.x-advance.round(0.01), 40.53, :abs-tol(0.02);
+    is $glyphs.y-advance.round(0.001), 0;
 }
 
