@@ -1,4 +1,7 @@
 {{$NEXT}}
+    - Moved cairo-glyphs() method from HarfBuzz::Buffer to
+      HarfBuzz::Shaper. Refactored to reprocess shape()
+      glyphs. Solves sizing issues #2
 
 0.0.2  2021-01-29T11:29:41+13:00
     - Make $.buf() reshape if buffer or font has been updated
